--- a/styles.css
+++ b/styles.css
@@ -85,30 +85,33 @@ body {
 .descricao__texto {
     color: var(--cinza-secundario);
 }
+
 .secundario__botao {
-     display: inline-block; 
-    }
+    display: inline-block;
+    margin-top: 1em;
+}
 
-    .container__descricao { 
-        padding: 2em;
-     }
-     .dispositivos__lista {
-         display: flex; 
-         justify-content: center;
-         list-style-type: none;
-        }
+.container__descricao {
+    padding: 2em;
+}
 
-        .dispositivos { 
-            text-align: center;
-            margin: 5em 0;
-         }
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
 
-         .dispositivos__titulo { 
-            font-size: 48px;
-         }
-         .lista__item { 
-            font-size: 32px; 
-            color: var(--branco-principal);
-        }
+.dispositivos {
+    text-align: center;
+}
 
-        
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
