--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,7 @@ body {
     font-size: 32px;
     color: var(--branco-principal);
 }
+    .rodape{
+        display: flex;
+        justify-content: center;
+    }
