--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,15 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
 }
-
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
+
 }
 
 * {
@@ -116,6 +117,38 @@ body {
     color: var(--branco-principal);
 }
     .rodape{
-        display: flex;
-        justify-content: center;
+        text-align: center;
+        margin: 5em ;
     }
+
+.rodape__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 1em 0  
+}
+ .lista__link a {
+    text-decoration: none;
+    color: var(--branco-principal);
+    font-size: 14px;
+        margin:0 1em
+}
+.rodape__texto{
+    text-align: center;
+    color: var(--cinza-secundario);
+    font-size: 10px;
+    margin: 1em 0em  
+}
+
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
+}
